crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__call-2.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
f(0)

# Func:
function <[[main]]>:
  frame_size: 5
  length: 14
  const (length=1):
    0: "f"
  code:
     0 | push_small_int value=0
     5 | store_reg r4
     7 | load_global [0]
     9 | call r4, args=1
    12 | ret 
    13 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  
