crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__call-5.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
f(a=0, b=1, c=2)

# Chunk:
function <test>:
  frame_size: 2
  length: 36
  const (length=4):
    0: "f"
    1: "a"
    2: "b"
    3: "c"
  code:
     0 | 08 00             load_global [0]
     2 | 05 00             store_reg r0
     4 | 14                create_empty_dict 
     5 | 05 01             store_reg r1
     7 | 11 00 00 00 00    push_small_int value=0
    12 | 16 01 01          insert_to_dict_keyed [1], r1
    15 | 11 01 00 00 00    push_small_int value=1
    20 | 16 02 01          insert_to_dict_keyed [2], r1
    23 | 11 02 00 00 00    push_small_int value=2
    28 | 16 03 01          insert_to_dict_keyed [3], r1
    31 | 2d 00 00          call_kw r0, args=0
    34 | 31                ret 
    35 | ff                suspend 

