crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__call-8.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
f(a+b, c=a+b)

# Func:
function <[[main]]>:
  frame_size: 7
  length: 30
  const (length=4):
    0: "a"
    1: "b"
    2: "c"
    3: "f"
  code:
     0 | load_global [0]
     2 | store_reg r6
     4 | load_global [1]
     6 | add r6
     8 | store_reg r5
    10 | create_empty_dict 
    11 | store_reg r4
    13 | load_global [0]
    15 | store_reg r6
    17 | load_global [1]
    19 | add r6
    21 | insert_to_dict_named [2], r4
    24 | load_global [3]
    26 | call_kw r4, args=1
    29 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r6 │                         ●━━━━━━━●
r7 │                                             ●━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  
