crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__call.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
f()

# Chunk:
function <test>:
  frame_size: 1
  length: 9
  const (length=1):
    0: "f"
  code:
    0 | 08 00             load_global [0]
    2 | 05 00             store_reg r0
    4 | 2c 00 00          call r0, args=0
    7 | 31                ret 
    8 | ff                suspend 

