crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__class-11.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
class T(U):
  a = 0
  b = 1


# Func:
function <[[main]]>:
  frame_size: 9
  length: 32
  const (length=5):
    0: <class desc T>
    1: "U"
    2: "a"
    3: "b"
    4: "T"
  code:
     0 | load_global [1]
     2 | store_reg r4
     4 | load_const [2]
     6 | store_reg r5
     8 | push_small_int value=0
    13 | store_reg r6
    15 | load_const [3]
    17 | store_reg r7
    19 | push_small_int value=1
    24 | store_reg r8
    26 | create_class [0], r4
    29 | store_global [4]
    31 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r6 │                             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r7 │                                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r8 │                                     ●━━━━━━━━━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  
